# RustPlayer

./: .gitignore  CHANGELOG.md  Cargo.toml  Chat  LICENSE  README.md  example.m3u
.github/workflows/: release.yml
src/: audio.rs  browser.rs  config.rs  main.rs  playlist.rs
