[package]
name = "rustplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17"
ratatui = "0.26"
crossterm = "0.27"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "ogg"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
