[package]
name = "rustplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { version = "0.17", features = ["symphonia-all"] }
ratatui = "0.26"
crossterm = "0.27"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "ogg", "aac"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
cpal = "0.15"
lofty = "0.21"
